--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
   <meta charset="utf-8">
-  <%- include('partial/_header.ejs') %>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
@@ -10,13 +9,13 @@
   <title>TinyApp</title>
 </head>
 <body>
-  <% if (user) { %>
+  <%- include('partials/_header') %>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Short URL ID</th>
+          <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
           <th scope="col">Edit</th>
           <th scope="col">Delete</th>
@@ -28,28 +27,18 @@
             <td><%= url %></td>
             <td><%= urls[url].longURL %></td>
             <td>
-              <a href="/urls/<%= url %>"> <button> Edit </button> </a>
+              <a class="btn btn-outline-primary" href="/urls/<%= url %>"> Edit </a>
             </td>
-            <td>
-              <form method="POST" action="/urls/<%= url %>/delete">
-                <button type="submit">Delete</button>
-              </form>
-            </td>
-            </tr>
+          <td>
+          <form method="POST" action="/urls/<%= url %>/delete">
+            <button type="submit" class="btn-outline-danger"> Delete </button>
+          </form>
+        </td>
+      </tr>
         <% } %>
-    
       </tbody>
     </table>
   </main>
-  <% } else { %>
-    <div>
-     <h3>
-      <a href="/login" >Login </a>or <a href="/register" >Register </a>to see your URLS. 
-     </h3>
-     </div>
-    <% } %>
-
-
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
