--- a/partials/_header.ejs
+++ b/partials/_header.ejs
@@ -1,26 +1,25 @@
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-success">
-      <a class="navbar-brand" href="/urls">TinyApp</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/urls">My URLs: </a>
-          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        </div>
+  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+    <a class="navbar-brand" href="/urls">TinyApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="/urls">My URLs</a>
+        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <% if(user){ %>
-        <p> Loggin In As : <%= user.email %></p>
-        <form action="/logout"   method="POST" >
-         <button  type="submit"> Logout </button> 
-       </form>
-          <% } else{ %>
-            <div class="navbar-nav"></div>
-            <a class="nav-item nav-link" href="/login">  Login  </a>
-            <a class="nav-item nav-link" href="/register"> Register </a>
-          </div>
-          <% } %>
-    </nav>
-  </header>
+    </div>
+    <div>
+      <% if (currentUser) {%>
+        <form method="POST" action="/logout">
+          <span style="width: 2000px;">Logged in as:  <%= currentUser %></span>
+          <button type="submit" class="btn btn-outline-secondary">Logout</button>
+        </form>
+      <% } else { %>
+        <a href="/url_login" class="btn btn-success" role="button" aria-disabled="true">Login</a>
+        <a href="/register" class="btn btn-success" role="button" aria-disabled="true">Register</a>
+      <% } %>
+    </div>
+    
+  </nav>
