--- a/views/url_login.ejs
+++ b/views/url_login.ejs
@@ -17,10 +17,11 @@
     <div class="row">
     <div class="col-sm-4">
       <form method="POST" action="/url_login">
-        <h6>E-mail</h6>
+        <h6>E-mail:</h6>
         <input class="form-control" type="text" name="email" placeholder="Please enter your E-mail" style="width: 300px; ">
-        <h6>Password:</h6>
+        <h6 >Password:</h6>
         <input class="form-control" type="password" name="password" placeholder="Please enter a password" style="width: 300px;">
+        <br>
         <button type="submit" class="btn-primary" value="submit">Login</button>
       </form>
     </div>
